[package]
name = "totp-lite"
version = "0.1.0"
edition = "2021"
authors = ["kk <kekelanact@gmail.com>"]
keywords = ["TOTP", "RFC 6238"]
license = "MIT"
homepage = "https://github.com/kekeimiku/totp-lite"
repository = "https://github.com/kekeimiku/totp-lite"
readme = "readme.md"

[dependencies.hmac]
version = "0.12.1"
default-features = false

[dependencies.sha2]
version = "0.10.6"
default-features = false

[dependencies.fastrand]
version = "1.8.0"
default-features = false

[dependencies.base32]
version = "0.4.0"
default-features = false
